--- a/.gitignore
+++ b/.gitignore
@@ -45,8 +45,8 @@ Desktop.ini
 # Django stuff:
 *.log
 local_settings.py
-makemigrations/*
-!makemigrations/__init__.py
+migrations/
+!migrations/__init__.py
 
 # My configurations:
 .idea/
