--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,19 @@
-appdirs==1.4.3
-asn1crypto==0.24.0
-attrs==18.2.0
-Automat==0.7.0
-backcall==0.1.0
-bleach==3.0.2
-cffi==1.11.5
-colorama==0.4.0
-constantly==15.1.0
-cryptography==2.3.1
-cssselect==1.0.3
-cycler==0.10.0
-decorator==4.3.0
-defusedxml==0.5.0
-Django==2.1.7
-django-debug-toolbar==1.11
+Django==2.2.2
+django-debug-toolbar==2.0
 django-environ==0.4.5
-django-extensions==2.1.5
-entrypoints==0.2.3
-et-xmlfile==1.0.1
-h2==3.1.0
-hpack==3.0.0
-hyperframe==5.2.0
-hyperlink==18.0.0
-idna==2.7
-incremental==17.5.0
-ipykernel==5.1.0
-ipython==7.1.1
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
-jdcal==1.4
-jedi==0.13.1
-Jinja2==2.10
-jsonschema==2.6.0
+django-extensions==2.1.9
 jupyter==1.0.0
-jupyter-client==5.2.3
-jupyter-console==6.0.0
-jupyter-core==4.4.0
-kiwisolver==1.0.1
-lxml==4.2.5
-MarkupSafe==1.1.0
-matplotlib==3.0.2
-mistune==0.8.4
+lxml==4.3.4
+matplotlib==3.1.0
 mysqlclient==1.4.2.post1
-nbconvert==5.4.0
-nbformat==4.4.0
-notebook==5.7.2
-numpy==1.15.4
-openpyxl==2.6.0
-pandas==0.23.4
-pandocfilters==1.4.2
-parsel==1.5.1
-parso==0.3.1
-pbr==5.1.2
-pickleshare==0.7.5
-Pillow==5.4.1
-priority==1.3.0
-prometheus-client==0.4.2
-prompt-toolkit==2.0.7
-pyasn1==0.4.5
-pyasn1-modules==0.2.4
-pycparser==2.19
-PyDispatcher==2.0.5
-Pygments==2.2.0
-PyHamcrest==1.9.0
-pyOpenSSL==19.0.0
-pyparsing==2.3.0
-pyserial==3.4
-python-dateutil==2.7.5
-pytz==2018.7
-pywin32==224
-pywinpty==0.5.4
-pyzmq==17.1.2
-qtconsole==4.4.3
-queuelib==1.5.0
-redis==3.2.0
-scipy==1.1.0
+numpy==1.16.4
+openpyxl==2.6.2
+pandas==0.24.2
+Pillow==6.0.0
+redis==3.2.1
+scipy==1.3.0
 Scrapy==1.6.0
 scrapyd==1.2.0
 scrapyd-client==1.1.0
-Send2Trash==1.5.0
-service-identity==18.1.0
-six==1.11.0
-SOAPpy==0.12.22
-sqlparse==0.2.4
-terminado==0.8.1
-testpath==0.4.2
-tornado==5.1.1
-traitlets==4.3.2
-Twisted==18.9.0
-w3lib==1.20.0
-wcwidth==0.1.7
-webencodings==0.5.1
-widgetsnbextension==3.4.2
-wstools==0.4.8
-zope.interface==4.6.0
+selenium==3.141.0
+Twisted==19.2.1
