--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,11 @@
 SECRET_KEY=some secret_key
 DEBUG=true
-DATABASE_URL=mysql://uname:passwd@localhost:3306/dbname
+
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_NAME=tdxstock
+MYSQL_USER=
+MYSQL_PASSWORD=
 
 MAIL_HOST=localhost
 MAIL_PORT=1025
