--- a/.env.sample
+++ b/.env.sample
@@ -1,11 +1,7 @@
 SECRET_KEY=some secret_key
 DEBUG=true
 
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_NAME=tdxstock
-MYSQL_USER=
-MYSQL_PASSWORD=
+DATABASE_URL=mysql://user:pass@127.0.0.1:3306/database?init_command=SET default_storage_engine=MyISAM&charset=utf8mb4
 
 MAIL_HOST=localhost
 MAIL_PORT=1025
