--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,17 @@
-Django==2.2.2
+Django==2.2.10
 django-debug-toolbar==2.0
 django-environ==0.4.5
 django-extensions==2.1.9
+mysqlclient==1.4.6
+Pillow==7.0.0
+redis==3.4.1
 jupyter==1.0.0
-lxml==4.3.4
-matplotlib==3.1.0
-mysqlclient==1.4.2.post1
-numpy==1.16.4
-openpyxl==2.6.2
-pandas==0.24.2
-Pillow==6.0.0
-redis==3.2.1
-scipy==1.3.0
-Scrapy==1.6.0
-scrapyd==1.2.0
+pandas==1.0.1
+matplotlib==3.1.3
+scipy==1.4.1
+lxml==4.5.0
+openpyxl==3.0.3
+Scrapy==1.8.0
+scrapyd==1.2.1
 scrapyd-client==1.1.0
 selenium==3.141.0
-Twisted==19.2.1
