--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-environ==0.4.5
 django-extensions==2.1.9
 django-filter==2.2.0
 djangorestframework==3.11.0
+django-cors-headers==3.2.1
 drf-dynamic-fields==0.3.1
 mysqlclient==1.4.6
 Pillow==7.0.0
