--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.13.0",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
+    "vue-fragment": "^1.5.1",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
