--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
+    "file-saver": "^2.0.2",
     "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-fragment": "^1.5.1",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "xlsx": "^0.15.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -34,6 +36,7 @@
     "eslint-plugin-vue": "^6.1.2",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.2",
+    "script-loader": "^0.7.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
