--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,8 @@
 SECRET_KEY=some secret_key
 DEBUG=true
 
-DATABASE_URL=mysql://user:pass@127.0.0.1:3306/database?init_command=SET default_storage_engine=MyISAM&charset=utf8mb4
+#DATABASE_URL=mysql://user:pass@127.0.0.1:3306/database?init_command=SET default_storage_engine=MyISAM&charset=utf8mb4
+DATABASE_URL=postgres://user:pass@127.0.0.1:5432/database
 
 MAIL_HOST=localhost
 MAIL_PORT=1025
