--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,20 @@
-Django==2.2.27
-django-debug-toolbar==2.2.1
-django-environ==0.4.5
-django-extensions==2.1.9
-django-filter==2.4.0
-djangorestframework==3.11.2
-django-cors-headers==3.2.1
+Django==4.0.2
+django-debug-toolbar==3.2.4
+django-environ==0.8.1
+django-extensions==3.1.5
+django-filter==21.1
+djangorestframework==3.13.1
+django-cors-headers==3.11.0
 drf-dynamic-fields==0.3.1
-mysqlclient==1.4.6
-Pillow==9.0.0
-redis==3.4.1
+psycopg2==2.9.3
+redis==4.1.4
 jupyter==1.0.0
-pandas==1.0.1
-matplotlib==3.1.3
-scipy==1.4.1
-lxml==4.6.5
-openpyxl==3.0.3
-Scrapy==1.8.1
-scrapyd==1.2.1
-scrapyd-client==1.1.0
-selenium==3.141.0
+pandas==1.4.1
+matplotlib==3.5.1
+scipy==1.8.0
+lxml==4.8.0
+openpyxl==3.0.9
+Scrapy==2.5.1
+scrapyd==1.3.0
+scrapyd-client==1.2.0
+selenium==4.1.0
