--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==4.0.2
+Django==4.0.4
 django-debug-toolbar==3.2.4
 django-environ==0.8.1
 django-extensions==3.1.5
@@ -14,7 +14,8 @@ matplotlib==3.5.1
 scipy==1.8.0
 lxml==4.8.0
 openpyxl==3.0.9
-Scrapy==2.5.1
+Scrapy==2.6.1
 scrapyd==1.3.0
 scrapyd-client==1.2.0
 selenium==4.1.0
+xpinyin==0.7.6
