--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = fetchdata.settings
+default = collector.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = fetchdata
+project = collector
